# cwru-ros-pkg-hydro

./: README-Epsilon.md  README.md
catkin/src/cwru_376_student/abb_pub_base/: CMakeLists.txt
catkin/src/cwru_376_student/abby_code/abby_simu/: CMakeLists.txt
catkin/src/cwru_376_student/cwru_urdf/: abby.rviz  abby_w_arm_urdf_rviz_only.xacro
catkin/src/cwru_376_student/example_lidar_alarm/: CMakeLists.txt
catkin/src/cwru_376_student/example_lidar_alarm/src/: lidar_alarm-alaa.cpp  lidar_alarm.cpp
catkin/src/cwru_376_student/example_robot_commander/: CMakeLists.txt
catkin/src/cwru_376_student/example_robot_commander/src/: vel_scheduler-alaa.cpp
catkin/src/cwru_376_student/ps3_epsilon/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/ps3_epsilon/src/: estop_listener_alaa.cpp  estop_listener_epsilon.cpp  lidar_alarm_alaa.cpp  lidar_alarm_epsilon.cpp  ps3_epsilon_launcher.launch  vel_lidar_alaa.cpp  vel_sched_epsilon.cpp
catkin/src/cwru_376_student/ps4_epsilon/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/ps4_epsilon/src/: lidar_alarm_epsilon_v2.cpp  lidar_alarm_epsilon_v3.cpp  ps4_epsilon_launcher.launch  vel_sched_epsilon_v2.cpp
catkin/src/cwru_376_student/ps4_epsilon/src/old/: lidar_alarm_epsilon_v2.cpp  vel_scheduler-alaa_v2.cpp
catkin/src/cwru_376_student/ps5_epsilon/Octave/: amcl_plotter.m  epsilonps5.bag  epsilonps5_amcl_pose.mat  epsilonps5_cmd_vel_stamped.mat  octave-core
catkin/src/cwru_376_student/ps5_epsilon/epsilon_des_state_generator/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/ps5_epsilon/epsilon_des_state_generator/src/: epsilon_des_state_generator.cpp  epsilon_des_state_generator.h  epsilon_estop_listener_v2.cpp  epsilon_path_sender.cpp  ps5_epsilon_des_state_launcher.launch
catkin/src/cwru_376_student/ps5_epsilon/epsilon_steering_algorithm/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/ps5_epsilon/epsilon_steering_algorithm/src/: epsilon_steering_algorithm.cpp  epsilon_steering_algorithm.h
catkin/src/cwru_376_student/ps5_epsilon/new/: vel_sched_epsilon_v2.cpp
catkin/src/cwru_376_student/ps6_epsilon/epsilon_interactive_marker/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/ps6_epsilon/epsilon_interactive_marker/src/: IM_6dof_epsilon.cpp
catkin/src/cwru_376_student/ps6_epsilon/epsilon_irb120_IM_interface/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/ps6_epsilon/epsilon_irb120_IM_interface/src/: epsilon_irb120_IM_interface.cpp
catkin/src/cwru_376_student/ps6_epsilon/epsilon_irb120_im_interface/: CMakeLists.txt  package.xml
catkin/src/cwru_376_student/ps6_epsilon/epsilon_irb120_im_interface/src/: epsilon_irb120_im_interface.cpp  epsilon_irb120_im_interface_v2.cpp
catkin/src/cwru_376_student/ps7_epsilon/epsilon_pcl/: CMakeLists.txt  package.xml
catkin/src/cwru_376_student/ps7_epsilon/epsilon_pcl/src/: epsilon_find_can.cpp  epsilon_pcd_save.cpp
catkin/src/cwru_376_student/wsn_examples/example_des_state_generator/src/: example_des_state_generator.cpp
catkin/src/cwru_376_student/wsn_examples/example_irb120_im_interface/: CMakeLists.txt
catkin/src/cwru_376_student/wsn_examples/example_lidar_alarm/: CMakeLists.txt
catkin/src/cwru_376_student/wsn_examples/example_pcl/: CMakeLists.txt
catkin/src/cwru_376_student/wsn_examples/example_robot_commander/: CMakeLists.txt
catkin/src/cwru_376_student/wsn_examples/example_robot_commander/src/: vel_scheduler-alaa.cpp
catkin/src/cwru_376_student/z_epsilon/: How to RUN z_epsilon.txt
catkin/src/cwru_376_student/z_epsilon/epsilon_arm/: CMakeLists.txt  package.xml
catkin/src/cwru_376_student/z_epsilon/epsilon_arm/src/: can_finder.cpp  irb120_int.cpp  pcd_saver.cpp
catkin/src/cwru_376_student/z_epsilon/epsilon_dsg/: CMakeLists.txt  package.xml
catkin/src/cwru_376_student/z_epsilon/epsilon_dsg/src/: dead_reck.cpp  dead_reck2.cpp  epsilon_dead_launcher.launch  epsilon_des_state_generator.h  epsilon_des_state_generator_odom.h  epsilon_dsg.cpp  epsilon_dsg_odom.cpp  goal_sender.cpp  goal_sender_odom.cpp  home_sender.cpp  home_sender_odom.cpp  odom poses.txt  z_epsilon_dsg_launcher.launch  z_epsilon_dsg_launcher_odom.launch
catkin/src/cwru_376_student/z_epsilon/epsilon_motion/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/z_epsilon/epsilon_motion/src/: approach_table.cpp  dead_reck.cpp  epsilon_dead_launcher.launch  epsilon_steering.cpp  epsilon_steering.h  epsilon_steering_odom.cpp  leave_table.cpp  lidar_alarm.cpp  simple_motion.cpp
catkin/src/cwru_376_student/z_epsilon/epsilon_motion/src/old/: approach_table.cpp
catkin/src/cwru_base_hydro/cwru_srv/: CMakeLists.txt  CMakeLists.txt.old
